egonlang-core/res/examples/invalid/if_else_expression_with_expr_as_then_and_else.eg
if true false else true

// out: SyntaxError: unexpected "false"